Rozdziel łańcuchy wywołań, wprowadź StringUtils i angielskie identyfikatory
Uwagi z przeglądu PR:

- rozbij łańcuchy `a().b()` na nazwane zmienne lokalne w sześciu miejscach
  (ImportService, ReportService, TransferSuggestionService, DedupKey,
  TextMatcher, ImportController)
- zastąp literały `""` przez `StringUtils.EMPTY`, a ręczne sprawdzanie
  pustego tekstu przez `StringUtils.isBlank()`; dodaj commons-lang3
  do root POM-a i modułu
- używaj `getFirst()` zamiast `get(0)` na listach
- zamień polskie identyfikatory na angielskie we wszystkich plikach Javy;
  komentarze, `@DisplayName` i literały z danymi zostają po polsku
- zapisz regułę „identyfikatory po angielsku" w backend-codestyle.md
  i w wiernej kopii docs/rules-pl/

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01ABBUjAsGhf3B2LUqiUDKE3